<resources>
    <string name="app_name">Android_ESTIAM</string>
    <string name="page_title">Accueil</string>
    <string name="more">Plus</string>
    <string name="content_description_more">Plus</string>
    <string name="search">Plus</string>
    <string name="content_description_search">Plus</string>
    <string name="favorite">Plus</string>
    <string name="content_description_favorite">Plus</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="connexion">Connexion</string>
    <string name="produit_favori">Produit Favori</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="produits">Produits</string>
    <string name="aucun_produit_en_favorie_pour_le_moment">Aucun produit en favorie pour le moment</string>
    <string name="envoyer_un_commentaire">Envoyer un commentaire</string>
    <string name="commentaire">Commentaire</string>
</resources>
