<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connexion"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/connexion" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/produits" />
        <item
            android:id="@+id/nav_favori"
            android:icon="@drawable/ic_favorite_24dp"
            app:actionLayout="@layout/favorite_badge"
            app:showAsAction="always"
            android:title="@string/produit_favori" />
    </group>
</menu>