<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <!-- Note: A RecyclerView can also be used -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:layout_marginTop="200dp"
        android:id="@+id/title_register"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/title_register"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/email"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_email"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/password"
        android:padding="15dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>